test-cases/valid/reject/void_array.ul
void main() {
    createVoidArray();
}

void createVoidArray() {
    // Since void is a type, this is allowed by the grammar, but is clearly nonsense.
    void[2] voidArray;
}